--- a/RF24_sensor_elmaaler/.settings/org.eclipse.cdt.core.prefs
+++ b/RF24_sensor_elmaaler/.settings/org.eclipse.cdt.core.prefs
@@ -1,46 +1,22 @@
 eclipse.preferences.version=1
 environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.ARCHITECTURE/delimiter=\:
 environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.ARCHITECTURE/operation=replace
-environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.ARCHITECTURE/value=avr
+environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.ARCHITECTURE/value=AVR
 environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.ARCHIVE_FILE/delimiter=\:
 environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.ARCHIVE_FILE/operation=replace
 environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.ARCHIVE_FILE/value=arduino.ar
-environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.BOOTLOADER.EXTENDED_FUSES/delimiter=\:
-environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.BOOTLOADER.EXTENDED_FUSES/operation=replace
-environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.BOOTLOADER.EXTENDED_FUSES/value=0x05
-environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.BOOTLOADER.FILE/delimiter=\:
-environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.BOOTLOADER.FILE/operation=replace
-environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.BOOTLOADER.FILE/value=atmega/ATmegaBOOT_168_atmega328.hex
-environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.BOOTLOADER.HIGH_FUSES/delimiter=\:
-environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.BOOTLOADER.HIGH_FUSES/operation=replace
-environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.BOOTLOADER.HIGH_FUSES/value=0xDA
-environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.BOOTLOADER.LOCK_BITS/delimiter=\:
-environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.BOOTLOADER.LOCK_BITS/operation=replace
-environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.BOOTLOADER.LOCK_BITS/value=0x0F
-environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.BOOTLOADER.LOW_FUSES/delimiter=\:
-environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.BOOTLOADER.LOW_FUSES/operation=replace
-environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.BOOTLOADER.LOW_FUSES/value=0xFF
-environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.BOOTLOADER.TOOL/delimiter=\:
-environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.BOOTLOADER.TOOL/operation=replace
-environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.BOOTLOADER.TOOL/value=avrdude
-environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.BOOTLOADER.UNLOCK_BITS/delimiter=\:
-environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.BOOTLOADER.UNLOCK_BITS/operation=replace
-environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.BOOTLOADER.UNLOCK_BITS/value=0x3F
 environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.BUILD.ARCH/delimiter=\:
 environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.BUILD.ARCH/operation=replace
 environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.BUILD.ARCH/value=AVR
+environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.BUILD.CORE.PATH/delimiter=\:
+environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.BUILD.CORE.PATH/operation=replace
+environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.BUILD.CORE.PATH/value=${A.RUNTIME.PLATFORM.PATH}/cores/${A.BUILD.CORE}
 environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.BUILD.CORE/delimiter=\:
 environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.BUILD.CORE/operation=replace
-environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.BUILD.CORE/value=arduino
+environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.BUILD.CORE/value=${JANTJE.BUILD_CORE}
 environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.BUILD.EXTRA_FLAGS/delimiter=\:
 environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.BUILD.EXTRA_FLAGS/operation=replace
 environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.BUILD.EXTRA_FLAGS/value=
-environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.BUILD.F_CPU/delimiter=\:
-environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.BUILD.F_CPU/operation=replace
-environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.BUILD.F_CPU/value=16000000L
-environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.BUILD.MCU/delimiter=\:
-environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.BUILD.MCU/operation=replace
-environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.BUILD.MCU/value=atmega328p
 environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.BUILD.PATH/delimiter=\:
 environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.BUILD.PATH/operation=replace
 environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.BUILD.PATH/value=${ProjDirPath}/${ConfigName}
@@ -52,16 +28,10 @@ environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.BUILD
 environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.BUILD.USE_ARCHIVER/value=true
 environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.BUILD.VARIANT.PATH/delimiter=\:
 environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.BUILD.VARIANT.PATH/operation=replace
-environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.BUILD.VARIANT.PATH/value=/home/jabk/projects/privat/arduino/arduino-1.5.1/hardware/arduino/avr/variants/${A.BUILD.VARIANT}
+environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.BUILD.VARIANT.PATH/value=${A.RUNTIME.PLATFORM.PATH}/variants/${A.BUILD.VARIANT}
 environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.BUILD.VARIANT/delimiter=\:
 environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.BUILD.VARIANT/operation=replace
-environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.BUILD.VARIANT/value=standard
-environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.CMD.PATH/delimiter=\:
-environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.CMD.PATH/operation=replace
-environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.CMD.PATH/value=${A.TOOLS.AVRDUDE.CMD.PATH}
-environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.CMD/delimiter=\:
-environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.CMD/operation=replace
-environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.CMD/value=${A.TOOLS.BOSSAC.CMD}
+environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.BUILD.VARIANT/value=${JANTJE.BUILD_VARIANT}
 environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.COMPILER.AR.CMD/delimiter=\:
 environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.COMPILER.AR.CMD/operation=replace
 environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.COMPILER.AR.CMD/value=avr-ar
@@ -103,22 +73,28 @@ environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.COMPI
 environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.COMPILER.OBJCOPY.EEP.FLAGS/value=-O ihex -j .eeprom --set-section-flags\=.eeprom\=alloc,load --no-change-warnings --change-section-lma .eeprom\=0
 environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.COMPILER.PATH/delimiter=\:
 environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.COMPILER.PATH/operation=replace
-environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.COMPILER.PATH/value=${A.RUNTIME.IDE.PATH}/hardware/tools/avr/bin/
+environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.COMPILER.PATH/value=${A.RUNTIME.HARDWARE.PATH}/tools/avr/bin/
 environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.COMPILER.S.FLAGS/delimiter=\:
 environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.COMPILER.S.FLAGS/operation=replace
 environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.COMPILER.S.FLAGS/value=-c -g -assembler-with-cpp
 environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.COMPILER.SIZE.CMD/delimiter=\:
 environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.COMPILER.SIZE.CMD/operation=replace
 environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.COMPILER.SIZE.CMD/value=avr-size
-environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.CONFIG.PATH/delimiter=\:
-environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.CONFIG.PATH/operation=replace
-environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.CONFIG.PATH/value=${A.TOOLS.AVRDUDE.CONFIG.PATH}
+environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.EXTRA.TIME.DTS/delimiter=\:
+environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.EXTRA.TIME.DTS/operation=replace
+environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.EXTRA.TIME.DTS/value=3600
+environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.EXTRA.TIME.LOCAL/delimiter=\:
+environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.EXTRA.TIME.LOCAL/operation=replace
+environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.EXTRA.TIME.LOCAL/value=1443642922
+environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.EXTRA.TIME.UTC/delimiter=\:
+environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.EXTRA.TIME.UTC/operation=replace
+environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.EXTRA.TIME.UTC/value=1443635722
+environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.EXTRA.TIME.ZONE/delimiter=\:
+environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.EXTRA.TIME.ZONE/operation=replace
+environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.EXTRA.TIME.ZONE/value=3600
 environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.NAME/delimiter=\:
 environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.NAME/operation=replace
-environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.NAME/value=Arduino Pro or Pro Mini
-environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.PATH/delimiter=\:
-environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.PATH/operation=replace
-environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.PATH/value=${A.TOOLS.BOSSAC.PATH}
+environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.NAME/value=Arduino AVR Boards
 environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.RECIPE.AR.PATTERN.1/delimiter=\:
 environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.RECIPE.AR.PATTERN.1/operation=replace
 environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.RECIPE.AR.PATTERN.1/value="${A.COMPILER.PATH}${A.COMPILER.AR.CMD}" ${A.COMPILER.AR.FLAGS} "${A.BUILD.PATH}/${A.ARCHIVE_FILE}" 
@@ -190,10 +166,13 @@ environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.RUNTI
 environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.RUNTIME.HARDWARE.PATH/value=/home/jabk/projects/privat/arduino/arduino-1.5.1/hardware
 environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.RUNTIME.IDE.PATH/delimiter=\:
 environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.RUNTIME.IDE.PATH/operation=replace
-environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.RUNTIME.IDE.PATH/value=/home/jabk/projects/privat/arduino/arduino-1.5.1
+environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.RUNTIME.IDE.PATH/value=/home/jabk/projects/privat/arduino/arduino-1.6.5
 environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.RUNTIME.IDE.VERSION/delimiter=\:
 environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.RUNTIME.IDE.VERSION/operation=replace
-environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.RUNTIME.IDE.VERSION/value=151
+environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.RUNTIME.IDE.VERSION/value=1.6.5-r5
+environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.RUNTIME.PLATFORM.PATH/delimiter=\:
+environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.RUNTIME.PLATFORM.PATH/operation=replace
+environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.RUNTIME.PLATFORM.PATH/value=/home/jabk/projects/privat/arduino/arduino-1.5.1/hardware/arduino/avr
 environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.SOFTWARE/delimiter=\:
 environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.SOFTWARE/operation=replace
 environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.SOFTWARE/value=ARDUINO
@@ -239,18 +218,6 @@ environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.TOOLS
 environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.TOOLS.AVRDUDE.UPLOAD.PATTERN/delimiter=\:
 environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.TOOLS.AVRDUDE.UPLOAD.PATTERN/operation=replace
 environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.TOOLS.AVRDUDE.UPLOAD.PATTERN/value="${A.CMD.PATH}" "-C${A.CONFIG.PATH}" ${A.UPLOAD.VERBOSE} -p${A.BUILD.MCU} -c${A.UPLOAD.PROTOCOL} -P${A.SERIAL.PORT} -b${A.UPLOAD.SPEED} -D "-Uflash\:w\:${A.BUILD.PATH}/${A.BUILD.PROJECT_NAME}.hex\:i"
-environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.UPLOAD.MAXIMUM_SIZE/delimiter=\:
-environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.UPLOAD.MAXIMUM_SIZE/operation=replace
-environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.UPLOAD.MAXIMUM_SIZE/value=30720
-environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.UPLOAD.PROTOCOL/delimiter=\:
-environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.UPLOAD.PROTOCOL/operation=replace
-environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.UPLOAD.PROTOCOL/value=arduino
-environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.UPLOAD.SPEED/delimiter=\:
-environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.UPLOAD.SPEED/operation=replace
-environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.UPLOAD.SPEED/value=57600
-environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.UPLOAD.TOOL/delimiter=\:
-environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.UPLOAD.TOOL/operation=replace
-environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/A.UPLOAD.TOOL/value=avrdude
 environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/JANTJE.BOARDS_FILE/delimiter=\:
 environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/JANTJE.BOARDS_FILE/operation=replace
 environment/project/it.baeyens.arduino.core.toolChain.release.1591300878/JANTJE.BOARDS_FILE/value=/home/jabk/projects/privat/arduino/arduino-1.5.1/hardware/arduino/avr/boards.txt
