--- a/HenHouseDoorOpener/.cproject
+++ b/HenHouseDoorOpener/.cproject
@@ -28,8 +28,10 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/HenHouseDoorOpener/Libraries/Sunrise}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/HenHouseDoorOpener/Libraries/Wire}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/HenHouseDoorOpener/Libraries/Wire/utility}&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/HenHouseDoorOpener/Libraries/time}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/HenHouseDoorOpener/Libraries/timelord}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/HenHouseDoorOpener/Libraries/time}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/HenHouseDoorOpener/Libraries/RF24}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/HenHouseDoorOpener/Libraries/SPI}&quot;"/>
 								</option>
 								<inputType id="it.baeyens.arduino.compiler.cpp.sketch.input.1660751000" name="CPP source files" superClass="it.baeyens.arduino.compiler.cpp.sketch.input"/>
 							</tool>
@@ -44,8 +46,10 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/HenHouseDoorOpener/Libraries/Sunrise}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/HenHouseDoorOpener/Libraries/Wire}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/HenHouseDoorOpener/Libraries/Wire/utility}&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/HenHouseDoorOpener/Libraries/time}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/HenHouseDoorOpener/Libraries/timelord}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/HenHouseDoorOpener/Libraries/time}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/HenHouseDoorOpener/Libraries/RF24}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/HenHouseDoorOpener/Libraries/SPI}&quot;"/>
 								</option>
 								<inputType id="it.baeyens.arduino.compiler.c.sketch.input.2075456613" name="C Source Files" superClass="it.baeyens.arduino.compiler.c.sketch.input"/>
 							</tool>
@@ -58,7 +62,7 @@
 						</toolChain>
 					</folderInfo>
 					<sourceEntries>
-						<entry excluding="Libraries/*/?xamples|Libraries/*/?xtras" flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name=""/>
+						<entry excluding="Libraries/RF24/RPi|Libraries/RF24/examples_RPi|Libraries/*/?xamples|Libraries/*/?xtras" flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name=""/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
